--- a/documentation/arc42/building_blocks/users_api/users_api_short_description.adoc
+++ b/documentation/arc42/building_blocks/users_api/users_api_short_description.adoc
@@ -1,1 +1,14 @@
+==== Users API
+The Users API microservice is responsible for managing all user-related functionality within the system. 
+Its primary purpose is to handle operations such as user registration, authentication, profile management, and account settings. 
+It also manages user data, including personal information, preferences, and security features like password updates and account recovery.
 
+===== Interface(s)
+link:https://editor.swagger.io/?url=https://raw.githubusercontent.com/shcherby/system-design-arc42/refs/heads/main/documentation/arc42/building_blocks/users_api/users_api_swagger.yaml[REST API]
+link:https://messages.com[Messages]
+
+===== Locations
+link:https://details.com[users-api full description]
+link:https://github.com[users-api git hub location]
+link:https://github.com[users-api build pipelines]
+link:https://github.com[users-api artifacts]
