--- a/documentation/arc42/05_building_block_view.adoc
+++ b/documentation/arc42/05_building_block_view.adoc
@@ -26,25 +26,7 @@ Maintain an overview of your source code by making its structure understandable 
 
 
 Contained Building Blocks::
-
-==== Users API
-
-The Users API microservice is responsible for managing all user-related functionality within the system. 
-Its primary purpose is to handle operations such as user registration, authentication, profile management, and account settings. 
-It also manages user data, including personal information, preferences, and security features like password updates and account recovery.
-
-===== Interface(s)
-link:https://editor.swagger.io/?url=https://raw.githubusercontent.com/OAI/OpenAPI-Specification/master/examples/v3.0/petstore.yaml[REST API]
-
-_<(Optional) Quality/Performance Characteristics>_
-
-_<(Optional) Directory/File Location>_
-
-_<(Optional) Fulfilled Requirements>_
-
-_<(optional) Open Issues/Problems/Risks>_
-
-
+include::./building_blocks/users_api/users_api_short_description.adocusers_api_short_description.adoc[]
 
 
 ==== <Name black box 2>
