--- a/documentation/arc42/building_blocks/timelines_api/timelines_api_details.adoc
+++ b/documentation/arc42/building_blocks/timelines_api/timelines_api_details.adoc
@@ -4,19 +4,82 @@ include::../diagrams/TimelinesAPIContainer-key.puml[]
 include::users_api_short.adoc[]
 
 ===== Fulfilled Requirements
+* Users can read their timeline with recent updates from users they follow.
+* Users can set number of posts in their timeline, max 50 posts.
+
 ===== Quality Requirements
-The API implements rate limiting to prevent abuse and ensure fair usage.
+* Aim for responses within 200 milliseconds.
+* Support 1000 requests per second (RPS) during peak times.
+* The Timelines API must remain operational even if other part of the system is temporarily unavailable.
 
 ===== Risks
 * Risk of slow response times or degraded performance during peak usage periods.
 
-===== Components
+==== Components
 include::../diagrams/TimelinesApiAppComponents.puml[]
 include::../diagrams/TimelinesApiAppComponents-key.puml[]
 
-====== Database
+===== Timeline Event Handler
+The Timeline Event Handler component is responsible for processing updates to user timelines in response to new created post.
 
-===== Scenarios
+===== Followers timeline updater
+Its primary responsibilities include:
+* Reads user followers list and insert recent post to the followers timeline, ensuring posts is ordered by recency.
+* Removes outdated posts from the followers timeline.
 
+===== Users client
+The UsersClient component is responsible for interacting with the Users API microservice to retrieve user data. 
+UsersClient implemented as an abstraction and has Mock version that uses for microservice integration testing.
+Its primary responsibilities include:
+* Fetching a list of followers for a given user.
+* Retrieving the user type regular user, influencer.
+
+===== Timelines repository
+The TimelinesRepository component is responsible for managing and accessing timeline data. 
+Its main responsibilities include:
+* Saving and retrieving followers timeline by user Id.
+
+===== Updating Influencers Posts Event Handler
+The Updating Influencers Posts Event Handler component is responsible for processing post created events related to influencer posts within the image-sharing system. 
+
+===== Influencers posts updater
+The Influencers Posts Updater component is responsible for managing and updating influencer-related posts within the timeline service. 
+Its primary responsibilities include:
+* Maintaining a synchronized copy of posts from users marked as influencers within the Timeline service.
+
+===== Influencers posts repository
+The Influencers Posts Repository component is responsible for storing and managing influencer posts within the timeline service.
+
+===== Timeline endpoint
+Handles Get timeline HTTP requests
+
+===== Timeline query
+The Timeline Query component is responsible for efficiently retrieving timeline data for users. 
+Its primary responsibilities include:
+* Querying and returning calculated user’s timeline by user Id
+* if the user follows any influencers, Querying and returning a user’s timeline by aggregating user timeline with an influencers posts.
+
+====== Timelines database
+The Key/Value NoSQL Timelines Database is responsible for efficiently storing and retrieving timeline data in the image-sharing system.
+
+======= Timelines table
+Storing each user’s timeline as a unique key, with associated values representing the posts in chronological order, allowing for quick retrieval of timelines.
+[cols="1,2", options="header"]
+|===
+| **Specification**   | **Details**                                                                 
+| **Table Name**       | Timelines                                                                    
+| **Key**              | User Id. Data format: GUID as string.                                                             
+| **Value**            | Array of posts, each represented as an object. Data format: JSON. Max size: 20 MB 
+|===
+
+======= Influences posts table
+Is responsible for managing and storing copy of posts created by influencers. 
+[cols="1,2", options="header"]
+|===
+| **Specification**   | **Details**                                                                 
+| **Table Name**       | InfluencersPosts                                                                    
+| **Key**              | Influencer Id. Data format: GUID as string.                                                             
+| **Value**            | Array of posts, each represented as an object. Data format: JSON. Max size: 20 MB 
+|===
 
 
