--- a/documentation/arc42/building_blocks/users_api/users_api_details.adoc
+++ b/documentation/arc42/building_blocks/users_api/users_api_details.adoc
@@ -1,7 +1,7 @@
 
 
-
-include::users_api_short_description.adoc[]
+==== Users API
+include::_users_api_short_description.adoc[]
 
 ===== Quality/Performance Characteristics
 ====== Performance
