--- a/documentation/arc42/building_blocks/timelines_api/_timelines_api.adoc
+++ b/documentation/arc42/building_blocks/timelines_api/_timelines_api.adoc
@@ -1,6 +1,31 @@
 :diagram-server-url: https://kroki.io
 :diagram-server-type: kroki_io
 
+==== Timelines API
+
+The Timelines API microservice is responsible for managing user timelines in the image-sharing system. 
+It retrieves posts from users that the specified user follows, ensuring that they are ordered by recency. 
+
+[plantuml, format=png]   
+....
+include::../../../diagrams/TimelinesAPIContainer.puml[]
+....
+
+[plantuml, format=png]   
+....
+include::../../../diagrams/TimelinesAPIContainer-key.puml[]
+....
+
+===== Interface(s)
+* link:https://editor.swagger.io/?url=https://raw.githubusercontent.com/shcherby/system-design-arc42/refs/heads/main/documentation/arc42/building_blocks/timelines_api/timelines_api_swagger.yaml[REST API]
+* link:https://github.com[Messages]
+
+===== Locations
+* link:https://github.com[Repository]
+* link:https://github.com[CI/CD]
+* link:https://github.com[Database]
+* link:https://github.com[Releases]
+
 ===== Fulfilled Requirements
 * Users can read their timeline with recent updates from users they follow.
 * Users can set number of posts in their timeline, max 50 posts.
@@ -23,9 +48,9 @@ include::../../../diagrams/TimelinesApiAppComponents.puml[]
 include::../../../diagrams/TimelinesApiAppComponents-key.puml[]
 ....
 
-*Timeline Event Handler*
+*Updating Timeline postCreated event consumer*
 
-* The Timeline Event Handler component is responsible for processing updates to user timelines in response to new created post.
+* Is responsible for processing updates to user timelines in response to new created post.
 
 *Followers timeline updater*
 
@@ -43,15 +68,6 @@ include::../../../diagrams/TimelinesApiAppComponents-key.puml[]
 
 * Responsible for managing and accessing timeline data. 
 * Saving and retrieving followers timeline by user Id.
-
-*Updating Influencers Posts Event Handler*
-
-* Responsible for processing post created events related to influencer posts within the image-sharing system. 
-
-*Influencers posts updater*
-
-* Responsible for managing and updating influencer-related posts within the timeline service. 
-* Maintaining a synchronized copy of posts from users marked as influencers within the Timeline service.
 
 *Influencers posts repository*
 
